fix overflow foooter. fix top bar notification

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -306,7 +306,7 @@ ul {
 .top__bar__notification span {
   position: absolute;
   top: -0.25rem;
-  right: 12px;
+  right: -4px;
   padding: 0.2rem;
   min-width: 1.2rem;
   min-height: 1.2rem;
@@ -317,6 +317,12 @@ ul {
   align-items: center;
   justify-content: center;
   font-size: 12px;
+}
+@media screen and (min-width: 1024px) {
+  .top__bar__notification span {
+    right: 12px;
+  }
+  
 }
 
 /* ::::::::::::::::::::  END TOP BAR :::::::::::::::::::::: */
@@ -513,9 +519,10 @@ video__item__info__container {
 .footer{
   padding: 0.5rem;
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
-  column-gap: 0.5rem;
+  gap: 1rem;
   font-size: 1rem;
   font-weight: 400;
   line-height: 1rem;
@@ -525,8 +532,14 @@ video__item__info__container {
 
 .footer__createBy{
   display: flex;
+  flex-direction: column;
   align-items: center;
   gap: 0.5rem;
+}
+@media (min-width:768px) {
+  .footer, .footer__createBy{
+    flex-direction: row;
+  }
 }
 
 .footer__social__links {
